# bogglego

./: .gitignore  Build  LICENSE  README.md  WORKSPACE
board/: BUILD.bazel  board.go
cmd/parallel/: main.go
cmd/sequential/: main.go
main/: BUILD.bazel  main.go
pkg/board/: board_test.go
pkg/trie/: trie.go  trie_test.go
scripts/: parallel.sh  sequential.sh
trie/: BUILD.bazel  trie.go  trie_test.go
