load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mikehelmick/bogglego/main",
    visibility = ["//visibility:private"],
    deps = [
        "//board:go_default_library",
        "//trie:go_default_library",
    ],
)

go_binary(
    name = "main",
    importpath = "github.com/mikehelmick/bogglego/main",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
