load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["trie.go"],
    importpath = "github.com/mikehelmick/bogglego/trie",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["trie_test.go"],
    importpath = "github.com/mikehelmick/bogglego/trie",
    library = ":go_default_library",
)
